# ChemDraft

./: Cargo.toml  LOG  README.md  readme.txt
data/: basic_compounds.db
src/: bond_type.rs  canvas_to_image.rs  chem_struct.rs  db_wrapper.rs  element.rs  init_database.rs  main.rs  message.rs  save_image.rs  struct_draw.rs  vector.rs
