[package]
name = "chemical_draw"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iced = {version = "0.8", features = ["canvas", "tokio", "debug"]}
iced_graphics = "0.7"
iced_wgpu = "0.9"
iced_core = "0.8"
env_logger = "0.9"
# wgpu = "0.15"
tokio = {version = "1.26", features = ["sync"]}
image = "0.24"
sqlite = "0.30"
native-dialog = "0.6.3"

